[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'Event proxy Node->Kafka'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'event-proxy'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-subxt = { git = "https://github.com/DEIPworld/substrate-subxt.git", rev = "ef106e3686869371302923f14f3961c89a3ca292" }
#substrate-subxt = { path = "../../substrate-subxt" }
jsonrpsee-ws-client = { version = "0.2.0", default-features = false , features = ["tokio1"] }
rdkafka = { version = "=0.26.0", default_features = true, features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
async-trait = "0.1.51"
futures = "0.3.16"
toml = "=0.5.8"

sp-core = "3.0.0"
sp-std = "3.0.0"
sp-runtime = "3.0.0"

pallet-deip-proposal = { path = "../pallets/deip_proposal" }
pallet-deip-dao = { path = "../pallets/deip_dao" }
pallet-deip-portal = { path = "../pallets/deip_portal" }
pallet-deip = { path = "../pallets/deip"}
pallet-deip-assets = { path = "../pallets/deip_assets"}
node-template-runtime = { path = '../runtime'}
deip-call = { package = "common-deip-call", path = "../common/deip_call" }

codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
hex = "0.4.3"

log = "0.4.14"
flexi_logger = "0.18.0"
clap = "2.33.3"

frame-support = "3.0.0"


[workspace]

[features]
default = []
