[package]
authors = ['DEIP world <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet defined DEIP porjects'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Unlicense'
name = 'pallet-deip'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-runtime = { version = '2.0.1', default-features = false }
sp-core = { default-features = false, version = '2.0.1' }
serde = { version = "1.0.123", optional = true, features = ["derive"]}

[dev-dependencies]
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std', 
    'serde'
]
