[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'FRAME pallet that wraps Proposals pallet to operates on DAO'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'pallet-deip-org-proposal'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.123", optional = true, features = ["derive"]}
pallet-deip-proposal = { path = "../deip_proposal", default-features = false, version = '3.0.0' }
pallet-deip-org = { path = "../deip_org", default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std', 
    'serde',
    'pallet-deip-proposal/std',
    'pallet-deip-org/std',
]
