[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'RPC for DEIP DAO pallet'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'pallet-deip-org-rpc'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
#frame-support = { default-features = false, version = '3.0.0' }
#frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { version = '3.0.0', default-features = false }
sp-core = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.123", optional = true, features = ["derive"]}
pallet-deip-org = { path = "../deip_org", default-features = false }

# RPC deps:
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
sp-api = { version = '3.0', default-features = false}
sp-blockchain = { version = '3.0', default-features = false}

[dev-dependencies]
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
#    'frame-support/std',
#    'frame-system/std',
    'sp-std/std', 
    'serde',
    'pallet-deip-org/std'
]
