[package]
name = "deip-runtime-api"
version = "2.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
sp-api = { version = '3.0', default-features = false}
sp-std = { default-features = false, version = '3.0.0' }

# local dependencies
pallet-deip = { path = "../../deip", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "sp-api/std",
]
